--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+@import url(https://fonts.googleapis.com/css?family=Montserrat|Quicksand&display=swap);/* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -87,8 +87,9 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
+  font-size: 20px;
+  font-family: "Quicksand", sans-serif;
   vertical-align: baseline;
 }
 
@@ -133,5 +134,30 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+a {
+  font-size: 18px;
+  text-decoration: none;
+  color: darkblue;
+}
+
+input,
+button {
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+input {
+  border: 1px solid black;
+}
+
+button {
+  font-family: "Quicksand", sans-serif;
+  border: none;
 }
 
